# pwt-rust

./: AGENTS.md  Cargo.toml  README.md  build.rs
proto/: pwt.proto
src/: errors.rs  key.rs  lib.rs  signing.rs
tests/: pwt_tests.rs
